styles.css
/* ... */
.page3 .middle-right input {
  width: 50px;
  font-weight: 500;
  font-size: 16px;
}

.page3 .bottom {
  position: absolute;
  width: 100%;
  height: calc(100% - 219px);
  top: 219px;
}

.page3 .bottom input#speed {
  position: absolute;
  right: 20.4%;
  display: block;
  width: 36px;
  top: 11.3%;
  font-size: 15px;
  background: white;
}

.page3 .bottom div#occupation-attributes {
  position: absolute;
  top: 27.6%;
  left: 33%;
  width: 54%;
  height: 11.6%;
  font-size: 15px;
  line-height: 18px;
  margin: 0;
}

.page3 .bottom div#occupation-attributes div#block {
  height: 100%;
  width: 85px;
  float: right;
}

.page3 .bottom div#occupation-attributes-2 {
  position: absolute;
  top: 53.2%;
  left: 38%;
  width: 55.5%;
  height: 45.6%;
  font-size: 15px;
  line-height: 18px;
  margin: 0;
}

input[type="checkbox"] {
  appearance: none;
  -webkit-appearance: none;
  width: 10px;
  height: 10px;
  accent-color: black;
  border: 1px solid #767676;
  border-radius: 2px;
  background-color: white;
  display: inline-grid;
  place-content: center;
  cursor: pointer;
}

input[type="checkbox"]:hover {
  border-color: #404040;
}

input[type="checkbox"]:focus-visible {
  outline: 2px solid black;
  outline-offset: 2px;
}

input[type="checkbox"]:checked {
  background-color: #404040;
  border-color: #404040;
}

input[type="checkbox"]:checked::before {
  content: "";
  width: 5px;
  height: 3px;
  border: 1.5px solid white;
  border-top: 0;
  border-right: 0;
  transform: rotate(-45deg);
  margin-top: -0.5px;
}

input[type="checkbox"]:disabled {
  background-color: #f0f0f0;
  border-color: #c6c6c6;
  cursor: not-allowed;
}

input[type="checkbox"]:checked:disabled {
  background-color: #a0a0a0;
  border-color: #a0a0a0;
}

.page4 .top {
  position: relative;
  height: 30%;
  width: 100%;
}

.page4 .top input[type=checkbox] {
  margin-bottom: 16px;
  margin-top: 5px;
}

.page4 .top .regular {
  position: absolute;
  left: 54.8%;
  top: 34.5%;
  display: grid;
  width: 31.5%;
  grid-template-columns: 1fr 1fr;
  justify-items: start;
}

.page4 .top .athletic {
  position: absolute;
  top: 63.3%;
  left: 8.6%;
  display: grid;
}

.page4 .top .survival {
  position: absolute;
  top: 63.3%;
  left: 25.8%;
  display: grid;
}

.page4 .top .personal {
  position: absolute;
  top: 63.3%;
  left: 43.2%;
  display: grid;
}

.page4 .top .stealth {
  position: absolute;
  top: 63.3%;
  left: 61.6%;
  display: grid;
}

.page4 .top .performance {
  position: absolute;
  top: 63.3%;
  left: 79.8%;
  display: grid;
}

.page4 .bottom-left {
  position: absolute;
  top: 40%;
  height: 45%;
  width: 30%;
}

.page4 .bottom-left input[type=checkbox] {
  margin-bottom: 15.3px;
}

.page4 .bottom-left .learning {
  position: absolute;
  top: 8.3%;
  left: 31.2%;
  display: grid;
}

.page4 .bottom-left .knowledge {
  position: absolute;
  top: 28.6%;
  left: 31.2%;
  display: grid;
}

.page4 .bottom-middle {
  position: absolute;
  top: 39%;
  height: 57%;
  left: 30%;
  width: 35%;
}

.page4 .bottom-middle .race-skills {
  position: absolute;
  top: 37.5%;
  left: 16.8%;
  width: 70%;
  line-height: 22px;
  font-size: 14px;
}

.page4 .bottom-middle .interaction-cover {
  position: absolute;
  inset: 0;
}

.page4 .bottom-right {
  position: absolute;
  top: 38.5%;
  height: 60%;
  left: 65%;
  width: 34%;
}

.page5 .spell-tier {
  display: flex;
  position: absolute;
  left: 4.5%;
  width: 91.4%;
  height: 12.6%;
  overflow: hidden;
  background: white;
  gap: 10px;
}

.page5 .spell-tier:nth-of-type(1) {
  top: 12.5%;
  border-radius: 0 0 0 38px;
}

.page5 .spell-tier:nth-of-type(2) {
  top: 29.6%;
  border-radius: 0 0 50px 0;
}

.page5 .spell-tier:nth-of-type(3) {
  top: 46.8%;
  border-radius: 0 0 0 38px;
}

.page5 .spell-tier:nth-of-type(4) {
  top: 63.9%;
  border-radius: 0 0 50px 0;
}

.page5 .spell-tier:nth-of-type(5) {
  top: 81%;
  border-radius: 0 0 0 38px;
}

.page5 .spell {
  width: 25%;
  height: 100%;
}

.page5 .spell .name,
.page5 .spell .ingrediants,
.page5 .spell .distance,
.page5 .spell .action-type {
  width: 100%;
  display: flex;
  font-size: 12px;
  align-items: center;
  gap: 2px;
  overflow: hidden;
}

.page5 .spell .effect {
  width: 100%;
  position: relative;
  font-size: 12px;
  display: flex;
  align-items: center;
}

.page5 .spell .action-type {
  justify-content: center;
  margin-top: 6px;
}

.page5 .spell .bullet {
  flex-shrink: 0;
}

.page5 .spell .label {
  white-space: nowrap;
}

.page5 .spell input[type="text"] {
  font-size: 12px;
  padding: 0 0 0 4px;
}

.page5 .spell .effect .label {
  position: absolute;
  top: 0;
  left: 0;
  background: white;
  display: flex;
  align-items: center;
}

.page5 .spell .effect .label .bullet {
  margin-right: 2px;
}

.page5 .spell .effect-text {
  width: 100%;
  height: 60px;
  line-height: 15px;
  font-size: 12px;
  text-indent: 34px;
  text-decoration: dotted underline #999;
  background-color: white;
}

.page5 .spell .effect-place-holder.row-1 {
  width: calc(100% - 34px);
  height: 12.8px;
  position: absolute;
  top: 0;
  left: 34px;
  border-bottom: 1px dotted #999;
}

.page5 .spell .effect-place-holder.row-2 {
  width: 100%;
  height: 15px;
  position: absolute;
  top: 12.8px;
  left: 0;
  border-bottom: 1px dotted #999;
}

.page5 .spell .effect-place-holder.row-3 {
  width: 100%;
  height: 15px;
  position: absolute;
  top: 27.8px;
  left: 0;
  border-bottom: 1px dotted #999;
}

.page5 .spell .effect-place-holder.row-4 {
  width: 100%;
  height: 15px;
  position: absolute;
  top: 42.8px;
  left: 0;
  border-bottom: 1px dotted #999;
}

.page5 .spell .distance input {
  width: 20px;
}

/* Dialog */
#dialog {
  display: none;
  position: fixed;
  background: white;
  width: 700px;
  max-width: 100%;
  height: 90vh;
  top: 5vh;
  overflow: scroll;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
  border-radius: 5px;
  z-index: 2;
}
/* ... */

